--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://wpqn88mpnfznnnhcrubh:pscale_pw_QM23uUvKdMRmCqzG55HvVRjzZxW36b4qf9XEhGkA4Ax@aws.connect.psdb.cloud/landingpage?sslaccept=strict'
+DATABASE_URL='mysql://wpqn88mpnfznnnhcrubh:pscale_pw_QM23uUvKdMRmCqzG55HvVRjzZxW36b4qf9XEhGkA4Ax@aws.connect.psdb.cloud/landingpage?sslaccept=strict?ssl={"rejectUnauthorized":true}'
 
 
-# USERNAME=wpqn88mpnfznnnhcrubh
-# PASSWORD=pscale_pw_QM23uUvKdMRmCqzG55HvVRjzZxW36b4qf9XEhGkA4Ax    
+USERNAME=wpqn88mpnfznnnhcrubh
+PASSWORD=pscale_pw_QM23uUvKdMRmCqzG55HvVRjzZxW36b4qf9XEhGkA4Ax    
